--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -84,5 +84,8 @@
   "extentFullyOOB": "The entire selected temporal extent is no longer available. The date range slider has been reset.",
   "expiredSecondaryLayer": "Timesteps for certain layers are no longer available. Time values have been updated.",
   "ApplyColor": "Apply color to basemap",
-  "RevertColor": "Revert to original color"
+  "RevertColor": "Revert to original color",
+  "Overlays": "Special layers",
+  "Boundaries": "Add geopolitical boundaries overlay",
+  "Major_cities": "Add major cities overlay"
 }
