Fixed a french translation and dropdown not greyed out when animating

--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -90,6 +90,6 @@
   "Overlays": "Superpositions",
   "OverlaysTip": "Les superpositions ajoutent de l'information au dessus des couches affichées.",
   "Boundaries": "Limites de frontières géopolitiques canadiennes",
-  "Major_cities": "Grandes villes canadiennes",
+  "Major_cities": "Villes canadiennes",
   "Water_bodies": "Délimitations des plans d'eau canadiens"
 }
