Error handling to prevent infinite loops of corrections

--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -7,6 +7,7 @@
   "ApplyColor": "Appliquer la couleur à la carte",
   "AttributionOSM": "Carte par © OpenStreetMap",
   "Boundaries": "Frontières géopolitiques canadiennes",
+  "BrokenLayer": "La couche ne peut présentement pas être chargée.",
   "Climate": "GeoMet-Climat",
   "Close": "Fermer",
   "CMD_WMS": "CMD-WMS",
@@ -14,8 +15,6 @@
   "DarkBasemapSwitch": "Carte foncée",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_fr/",
   "ErrorNoTimeLayer": "Veuillez ajouter une couche temporelle",
-  "ExpiredExtentRefreshed": "Certains des pas de temps sélectionnés ne sont plus disponibles. La plage des dates sélectionnées a été ajustée.",
-  "ExpiredSecondaryLayer": "Des pas de temps pour certaines couches sélectionnées ne sont plus disponibles. Les informations temporelles ont été mises à jour.",
   "ExtentFullyOOB": "La plage complète des dates sélectionnées n'est plus disponible. La plage des dates sélectionnées a été réinitialisée.",
   "FPS": "IPS",
   "FramesPerSecond": "Images par seconde",
@@ -42,6 +41,7 @@
   "MapPlay": "Faire avancer les pas de temps à des intervalles de 1 seconde",
   "MapRewindBackAll": "Reculer au premier pas de temps",
   "MapRewindBackOne": "Reculer d'un pas de temps",
+  "MissingTimesteps": "Des pas de temps pour certaines couches sélectionnées ne sont pas disponibles. Les informations temporelles ont été mises à jour.",
   "ModelRun": "Passe du modèle",
   "MP4CreateButtonLabel": "Créer l'animation",
   "MP4CreateCancelAnimationCreation": "Annuler",
@@ -67,6 +67,7 @@
   "SnappedLayer": "Étendue temporelle et intervalle appliqués à l'animation.",
   "SocialWeatherHashtags": "meteo,donneesouvertes",
   "TimestepsDropdown": "Pas de temps",
+  "UnhandledError": "Une erreur non répertoriée a été rencontrée. La couche a dû être retirée.",
   "UserDoc": "Documentation utilisateur",
   "Water_bodies": "Délimitations des plans d'eau canadiens",
   "Weather": "GeoMet-Météo"
