--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -7,6 +7,7 @@
   "ApplyColor": "Apply color to basemap",
   "AttributionOSM": "Map by ©OpenStreetMap",
   "Boundaries": "Canadian geopolitical boundaries",
+  "BrokenLayer": "Currently unable to load layer.",
   "Climate": "GeoMet-Climate",
   "Close": "Close",
   "CMD_WMS": "CMD-WMS",
@@ -14,8 +15,6 @@
   "DarkBasemapSwitch": "Dark basemap",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_en/",
   "ErrorNoTimeLayer": "Please add a temporal layer",
-  "ExpiredExtentRefreshed": "Some of the selected timesteps are no longer available. The date range slider has been adjusted.",
-  "ExpiredSecondaryLayer": "Timesteps for certain layers are no longer available. Time values have been updated.",
   "ExtentFullyOOB": "The entire selected temporal extent is no longer available. The date range slider has been reset.",
   "FPS": "FPS",
   "FramesPerSecond": "Frames per second",
@@ -42,6 +41,7 @@
   "MapPlay": "Play through the time steps at 1 second intervals",
   "MapRewindBackAll": "Move back to the first time step",
   "MapRewindBackOne": "Move back one time step",
+  "MissingTimesteps": "Some requested timesteps could not be retrieved. The temporal values have been updated.",
   "ModelRun": "Model run",
   "MP4CreateButtonLabel": "Create animation",
   "MP4CreateCancelAnimationCreation": "Cancel",
@@ -67,6 +67,7 @@
   "SnappedLayer": "Temporal extent and interval currently applied to animation.",
   "SocialWeatherHashtags": "weather,opendata",
   "TimestepsDropdown": "Interval",
+  "UnhandledError": "An unhandled error was encountered. The layer had to be removed.",
   "UserDoc": "User documentation",
   "Water_bodies": "Canadian water bodies",
   "Weather": "GeoMet-Weather"
