--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -66,6 +66,7 @@
   "SnapLayerToExtent": "Apply temporal extent and interval to animation.",
   "SnappedLayer": "Temporal extent and interval currently applied to animation.",
   "SocialWeatherHashtags": "weather,opendata",
+  "StyleError": "The WMS request failed with the style included in the request. The layer's style has thus been reset to the default style and may not match with the displayed legend.",
   "TimestepsDropdown": "Interval",
   "UnhandledError": "An unhandled error was encountered. The layer had to be removed.",
   "UserDoc": "User documentation",
