Bugfixes and small changes

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -12,7 +12,7 @@
   "Close": "Close",
   "CMD_WMS": "CMD-WMS",
   "Colon": ":",
-  "ColorBorder": "Display legend color border",
+  "ColorBorder": "Display legends with coloured borders",
   "DarkBasemapSwitch": "Dark basemap",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_en/",
   "ErrorNoTimeLayer": "Please add a temporal layer",
@@ -59,9 +59,10 @@
   "MP4ExportTitle": "Visualize & export",
   "MSCAnimet": "MSC AniMet",
   "MSCAnimetEmail": "Weather animation made with MSC AniMet",
-  "NoTimeTooltip": "This layer is not time dependent",
+  "NoTimeTooltip": "Layer has no temporal dimension",
   "Overlays": "Overlays",
   "OverlaysTip": "Overlays add information on top of displayed layers.",
+  "ResetRotation": "Reset rotation",
   "RevertColor": "Revert to original color",
   "SelectMR": "Select model run",
   "Share": "Share",
