--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -59,9 +59,10 @@
   "MP4ExportTitle": "Visualiser et exporter",
   "MSCAnimet": "AniMet du SMC",
   "MSCAnimetEmail": "Animation météo créée à partir d'AniMet du SMC",
-  "NoTimeTooltip": "Cette couche ne dépend pas du temps",
+  "NoTimeTooltip": "La couche ne possède pas de dimension temporelle",
   "Overlays": "Superpositions",
   "OverlaysTip": "Les superpositions ajoutent de l'information au-dessus des couches affichées.",
+  "ResetRotation": "Réinitialiser la rotation",
   "RevertColor": "Remettre la couleur originale",
   "SelectMR": "Selectionner la passe de modèle",
   "Share": "Partager",
