Added getFeatureInfo on mapclick

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -37,6 +37,7 @@
   "LayerStyle": "Select layer style",
   "Legends": "Legends",
   "LegendSelector": "Select displayed legend(s)",
+  "Loading": "Loading...",
   "MadeWithAniMet": "Made with MSC AniMet",
   "Major_cities": "Canadian cities",
   "MapJumpForwardAll": "Jump to the last time step",
@@ -60,9 +61,11 @@
   "MP4ExportTitle": "Visualize & export",
   "MSCAnimet": "MSC AniMet",
   "MSCAnimetEmail": "Weather animation made with MSC AniMet",
+  "NoData": "No data available here",
   "NoTimeTooltip": "Layer has no temporal dimension",
   "Overlays": "Overlays",
   "OverlaysTip": "Overlays add information on top of displayed layers.",
+  "RawValue": "Raw value",
   "ResetRotation": "Reset rotation",
   "RevertColor": "Revert to original color",
   "SelectMR": "Select model run",
