--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -37,6 +37,7 @@
   "LayerStyle": "Sélectionner le style de la couche",
   "Legends": "Légendes",
   "LegendSelector": "Sélectionner la ou les légende(s) affichée(s)",
+  "Loading": "Chargement...",
   "MadeWithAniMet": "Créé avec AniMet du SMC",
   "Major_cities": "Villes canadiennes",
   "MapJumpForwardAll": "Passer au dernier pas de temps",
@@ -60,9 +61,11 @@
   "MP4ExportTitle": "Visualiser et exporter",
   "MSCAnimet": "AniMet du SMC",
   "MSCAnimetEmail": "Animation météo créée à partir d'AniMet du SMC",
+  "NoData": "Aucune donnée disponible ici",
   "NoTimeTooltip": "La couche ne possède pas de dimension temporelle",
   "Overlays": "Superpositions",
   "OverlaysTip": "Les superpositions ajoutent de l'information au-dessus des couches affichées.",
+  "RawValue": "Valeur brute",
   "ResetRotation": "Réinitialiser la rotation",
   "RevertColor": "Remettre la couleur originale",
   "SelectMR": "Selectionner la passe de modèle",
