Complete UI/UX redesign

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -3,8 +3,8 @@
   "AppBarCreate": "Animation configuration",
   "AppBarExport": "Created animation",
   "AppBarMap": "Map",
-  "AppBarTree": "GeoMet layers",
   "ApplyColor": "Apply color to basemap",
+  "AspectSelection": "Select aspect ratio",
   "AttributionOSM": "Map by ©OpenStreetMap",
   "Boundaries": "Canadian geopolitical boundaries",
   "BrokenLayer": "Currently unable to load layer.",
@@ -33,13 +33,15 @@
   "LayerBarStartsTooltip": "Start",
   "LayerBarStepTooltip": "Interval",
   "LayerBarVisibilityTooltip": "Toggle visibility",
-  "LayerControlsTitle": "Layers configuration",
+  "LayerControlsTitle": "Configure",
   "LayerStyle": "Select layer style",
-  "Legends": "Legends",
+  "LayerTree": "Add",
+  "Legends": "Displayed legends",
   "LegendSelector": "Select displayed legend(s)",
   "Loading": "Loading...",
   "MadeWithAniMet": "Made with MSC AniMet",
   "Major_cities": "Canadian cities",
+  "MapCustomizations": "Customize basemap",
   "MapJumpForwardAll": "Jump to the last time step",
   "MapJumpForwardOne": "Jump to the next time step",
   "MapPlay": "Play through the time steps at 1 second intervals",
@@ -54,18 +56,19 @@
   "MP4CreateLightMode": "Light mode",
   "MP4CreateNotifyCancelAnimation": "The animation creation has been cancelled given your browser window has been resized",
   "MP4CreateTimeFormat": "Local time",
-  "MP4CreateTitle": "Animation configuration",
+  "MP4CreateTitle": "Animate",
   "MP4CreateTitleHint": "Limit of 250 characters",
-  "MP4ExportDownload": "Download animation as MP4",
+  "MP4ExportDownload": "Download as MP4",
   "MP4ExportSubtitle": "Preview the created animation and download using the button below",
   "MP4ExportTitle": "Visualize & export",
   "MSCAnimet": "MSC AniMet",
   "MSCAnimetEmail": "Weather animation made with MSC AniMet",
   "NoData": "No data available here",
   "NoTimeTooltip": "Layer has no temporal dimension",
+  "OtherProperties": "Properties",
   "Overlays": "Overlays",
   "OverlaysTip": "Overlays add information on top of displayed layers.",
-  "RawValue": "Raw value",
+  "Portrait": "Portrait",
   "ResetRotation": "Reset rotation",
   "RevertColor": "Revert to original color",
   "SelectMR": "Select model run",
@@ -73,11 +76,17 @@
   "SnapLayerToExtent": "Apply temporal extent and interval to animation.",
   "SnappedLayer": "Temporal extent and interval currently applied to animation.",
   "SocialWeatherHashtags": "weather,opendata",
+  "Square": "Square",
+  "Standard": "Standard",
   "StyleError": "The WMS request failed with the style included in the request. The layer's style has thus been reset to the default style and may not match with the displayed legend.",
   "TimestepsDropdown": "Interval",
+  "UltraWideScreen": "Ultra-widescreen",
   "UnhandledError": "An unhandled error was encountered. The layer had to be removed.",
   "UserDoc": "User documentation",
+  "Value": "Value",
+  "VideoFormat": "Resolution",
   "Water_bodies": "Canadian water bodies",
   "Weather": "GeoMet-Weather",
+  "Widescreen": "Widescreen",
   "WrongTimeFormat": "The format used for time is not recognized by the application.\nThe WMS standard supports 4 ways of adding dates inside a WMS, which are:\n\tA single date;\n\tMultiple dates comma separated;\n\tStart/End/Interval;\n\tStart1/End1/Interval1,Start2/End2/Interval2,etc.\nIf you wish to add this layer to AniMet, you will need to update the WMS source accordingly."
 }
