--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -3,8 +3,8 @@
   "AppBarCreate": "Configuration",
   "AppBarExport": "Animation créée",
   "AppBarMap": "Carte",
-  "AppBarTree": "Couches GeoMet",
   "ApplyColor": "Appliquer la couleur à la carte",
+  "AspectSelection": "Sélectionner le format de sortie",
   "AttributionOSM": "Carte par © OpenStreetMap",
   "Boundaries": "Frontières géopolitiques canadiennes",
   "BrokenLayer": "La couche ne peut présentement pas être chargée.",
@@ -33,13 +33,15 @@
   "LayerBarStartsTooltip": "Début",
   "LayerBarStepTooltip": "Intervalle",
   "LayerBarVisibilityTooltip": "Régler la visibilité",
-  "LayerControlsTitle": "Configuration des couches",
+  "LayerControlsTitle": "Configurer",
   "LayerStyle": "Sélectionner le style de la couche",
-  "Legends": "Légendes",
+  "LayerTree": "Ajouter",
+  "Legends": "Affichage des légendes",
   "LegendSelector": "Sélectionner la ou les légende(s) affichée(s)",
   "Loading": "Chargement...",
   "MadeWithAniMet": "Créé avec AniMet du SMC",
   "Major_cities": "Villes canadiennes",
+  "MapCustomizations": "Personnaliser la carte de fond",
   "MapJumpForwardAll": "Passer au dernier pas de temps",
   "MapJumpForwardOne": "Passer au pas de temps suivant",
   "MapPlay": "Faire avancer les pas de temps à des intervalles de 1 seconde",
@@ -54,18 +56,19 @@
   "MP4CreateLightMode": "Mode clair",
   "MP4CreateNotifyCancelAnimation": "La création de l'animation a été annulée car la fenêtre de votre navigateur a été redimensionnée.",
   "MP4CreateTimeFormat": "Heure locale",
-  "MP4CreateTitle": "Configuration de l'animation",
+  "MP4CreateTitle": "Animer",
   "MP4CreateTitleHint": "Limite de 250 caractères",
-  "MP4ExportDownload": "Télécharger l'animation au format MP4",
+  "MP4ExportDownload": "Télécharger au format MP4",
   "MP4ExportSubtitle": "Prévisualiser l'animation créée et télécharger à l'aide du bouton ci-dessous",
   "MP4ExportTitle": "Visualiser et exporter",
   "MSCAnimet": "AniMet du SMC",
   "MSCAnimetEmail": "Animation météo créée à partir d'AniMet du SMC",
   "NoData": "Aucune donnée disponible ici",
   "NoTimeTooltip": "La couche ne possède pas de dimension temporelle",
+  "OtherProperties": "Propriétés",
   "Overlays": "Superpositions",
   "OverlaysTip": "Les superpositions ajoutent de l'information au-dessus des couches affichées.",
-  "RawValue": "Valeur brute",
+  "Portrait": "Portrait",
   "ResetRotation": "Réinitialiser la rotation",
   "RevertColor": "Remettre la couleur originale",
   "SelectMR": "Selectionner la passe de modèle",
@@ -73,11 +76,17 @@
   "SnapLayerToExtent": "Appliquer l'étendue temporelle et l'intervalle à l'animation.",
   "SnappedLayer": "Étendue temporelle et intervalle appliqués à l'animation.",
   "SocialWeatherHashtags": "meteo,donneesouvertes",
+  "Square": "Carré",
+  "Standard": "Standard",
   "StyleError": "La requête WMS n'a pas fonctionné en incluant le style dans la requête. Le style de la couche a donc été réinitialisé au style par défaut et peut ne pas correspondre à la légende affichée.",
   "TimestepsDropdown": "Pas de temps",
+  "UltraWideScreen": "Ultra-large",
   "UnhandledError": "Une erreur non répertoriée a été rencontrée. La couche a dû être retirée.",
-  "UserDoc": "Documentation utilisateur",
+  "UserDoc": "Documentation usager",
+  "Value": "Valeur",
+  "VideoFormat": "Résolution",
   "Water_bodies": "Délimitations des plans d'eau canadiens",
   "Weather": "GeoMet-Météo",
+  "Widescreen": "Large",
   "WrongTimeFormat": "Le format utilisé pour le temps n'est pas reconnu par l'application.\nLe standard WMS supporte 4 façons d'ajouter vos dates à l'intérieur d'un WMS, soit:\n\tUne seule date;\n\tPlusieurs dates séparées d'une virgule;\n\tDébut/Fin/Intervalle;\n\tDébut1/Fin1/Intervalle1,Début2/Fin2/Intervalle2,etc.\nSi vous souhaitez ajouter cette couche dans AniMet, veuillez faire les changements appropriés dans votre source WMS."
 }
