Added possibility to play animation backwards

--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -13,9 +13,9 @@
   "CMD_WMS": "CMD-WMS",
   "Colon": " :",
   "ColorBorder": "Afficher la bordure des légendes en couleur",
-  "DarkBasemapSwitch": "Carte foncée",
+  "ControllerOptions": "Options de lecture",
+  "DarkBasemapSwitch": "Sombre",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_fr/",
-  "ErrorNoTimeLayer": "Veuillez ajouter une couche temporelle",
   "ExtentFullyOOB": "La plage complète des dates sélectionnées n'est plus disponible. La plage des dates sélectionnées a été réinitialisée.",
   "FPS": "IPS",
   "FramesPerSecond": "Images par seconde",
@@ -39,14 +39,10 @@
   "Legends": "Affichage des légendes",
   "LegendSelector": "Sélectionner la ou les légende(s) affichée(s)",
   "Loading": "Chargement...",
+  "Loop": "Lecture en boucle",
   "MadeWithAniMet": "Créé avec AniMet du SMC",
   "Major_cities": "Villes canadiennes",
   "MapCustomizations": "Personnaliser la carte de fond",
-  "MapJumpForwardAll": "Passer au dernier pas de temps",
-  "MapJumpForwardOne": "Passer au pas de temps suivant",
-  "MapPlay": "Faire avancer les pas de temps à des intervalles de 1 seconde",
-  "MapRewindBackAll": "Reculer au premier pas de temps",
-  "MapRewindBackOne": "Reculer d'un pas de temps",
   "MissingTimesteps": "Des pas de temps pour certaines couches sélectionnées ne sont pas disponibles. Les informations temporelles ont été mises à jour.",
   "ModelRun": "Passe du modèle",
   "MP4CreateButtonLabel": "Créer l'animation",
@@ -71,6 +67,7 @@
   "Portrait": "Portrait",
   "ResetRotation": "Réinitialiser la rotation",
   "RevertColor": "Remettre la couleur originale",
+  "Reverse": "Lecture à reculons",
   "SelectMR": "Selectionner la passe de modèle",
   "Share": "Partager",
   "SnapLayerToExtent": "Appliquer l'étendue temporelle et l'intervalle à l'animation.",
