--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -13,9 +13,9 @@
   "CMD_WMS": "CMD-WMS",
   "Colon": ":",
   "ColorBorder": "Display legends with coloured borders",
-  "DarkBasemapSwitch": "Dark basemap",
+  "ControllerOptions": "Playback options",
+  "DarkBasemapSwitch": "Dark",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_en/",
-  "ErrorNoTimeLayer": "Please add a temporal layer",
   "ExtentFullyOOB": "The entire selected temporal extent is no longer available. The date range slider has been reset.",
   "FPS": "FPS",
   "FramesPerSecond": "Frames per second",
@@ -39,14 +39,10 @@
   "Legends": "Displayed legends",
   "LegendSelector": "Select displayed legend(s)",
   "Loading": "Loading...",
+  "Loop": "Loop",
   "MadeWithAniMet": "Made with MSC AniMet",
   "Major_cities": "Canadian cities",
   "MapCustomizations": "Customize basemap",
-  "MapJumpForwardAll": "Jump to the last time step",
-  "MapJumpForwardOne": "Jump to the next time step",
-  "MapPlay": "Play through the time steps at 1 second intervals",
-  "MapRewindBackAll": "Move back to the first time step",
-  "MapRewindBackOne": "Move back one time step",
   "MissingTimesteps": "Some requested timesteps could not be retrieved. The temporal values have been updated.",
   "ModelRun": "Model run",
   "MP4CreateButtonLabel": "Create animation",
@@ -71,6 +67,7 @@
   "Portrait": "Portrait",
   "ResetRotation": "Reset rotation",
   "RevertColor": "Revert to original color",
+  "Reverse": "Play in reverse",
   "SelectMR": "Select model run",
   "Share": "Share",
   "SnapLayerToExtent": "Apply temporal extent and interval to animation.",
