Added support for projections and graticules

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -13,6 +13,7 @@
   "CMD_WMS": "CMD-WMS",
   "Colon": ":",
   "ColorBorder": "Display legends with coloured borders",
+  "ColorPicker": "Color picker",
   "ControllerOptions": "Playback options",
   "DarkBasemapSwitch": "Dark",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_en/",
@@ -68,8 +69,10 @@
   "ResetRotation": "Reset rotation",
   "RevertColor": "Revert to original color",
   "Reverse": "Play in reverse",
+  "SelectCRS": "Select projection",
   "SelectMR": "Select model run",
   "Share": "Share",
+  "ShowGraticules": "Show graticules",
   "SnapLayerToExtent": "Apply temporal extent and interval to animation.",
   "SnappedLayer": "Temporal extent and interval currently applied to animation.",
   "SocialWeatherHashtags": "weather,opendata",
