--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -13,6 +13,7 @@
   "CMD_WMS": "CMD-WMS",
   "Colon": " :",
   "ColorBorder": "Afficher la bordure des légendes en couleur",
+  "ColorPicker": "Sélecteur de couleur",
   "ControllerOptions": "Options de lecture",
   "DarkBasemapSwitch": "Sombre",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_fr/",
@@ -68,8 +69,10 @@
   "ResetRotation": "Réinitialiser la rotation",
   "RevertColor": "Remettre la couleur originale",
   "Reverse": "Lecture à reculons",
-  "SelectMR": "Selectionner la passe de modèle",
+  "SelectCRS": "Sélectionner la projection",
+  "SelectMR": "Sélectionner la passe de modèle",
   "Share": "Partager",
+  "ShowGraticules": "Montrer les graticules",
   "SnapLayerToExtent": "Appliquer l'étendue temporelle et l'intervalle à l'animation.",
   "SnappedLayer": "Étendue temporelle et intervalle appliqués à l'animation.",
   "SocialWeatherHashtags": "meteo,donneesouvertes",
