Change basemap to map and removed arrow for consistency

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -43,7 +43,7 @@
   "Loop": "Loop",
   "MadeWithAniMet": "Made with MSC AniMet",
   "Major_cities": "Canadian cities",
-  "MapCustomizations": "Customize basemap",
+  "MapCustomizations": "Customize map",
   "MissingTimesteps": "Some requested timesteps could not be retrieved. The temporal values have been updated.",
   "ModelRun": "Model run",
   "MP4CreateButtonLabel": "Create animation",
