--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -43,7 +43,7 @@
   "Loop": "Lecture en boucle",
   "MadeWithAniMet": "Créé avec AniMet du SMC",
   "Major_cities": "Villes canadiennes",
-  "MapCustomizations": "Personnaliser la carte de fond",
+  "MapCustomizations": "Personnaliser la carte",
   "MissingTimesteps": "Des pas de temps pour certaines couches sélectionnées ne sont pas disponibles. Les informations temporelles ont été mises à jour.",
   "ModelRun": "Passe du modèle",
   "MP4CreateButtonLabel": "Créer l'animation",
