Added 404 handling and changed page icon

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -22,6 +22,7 @@
   "FramesPerSecond": "Frames per second",
   "GeoMetSearchLabel": "Search {wmsSource} layers",
   "GeoMetWms": "Add {wmsSource} layers",
+  "GoToHomePage": "Go to MSC AniMet home page",
   "InvisibleBasemap": "Make basemap invisible",
   "LayerBarClosestTime": "Closest time: ",
   "LayerBarCurrentTooltip": "Current",
@@ -61,6 +62,8 @@
   "MSCAnimet": "MSC AniMet",
   "MSCAnimetEmail": "Weather animation made with MSC AniMet",
   "NoData": "No data available here",
+  "NotFound": "404 Not Found",
+  "NotFoundSub": "The page you are looking for does not exist.",
   "NoTimeTooltip": "Layer has no temporal dimension",
   "OtherProperties": "Properties",
   "Overlays": "Overlays",
