--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -22,6 +22,7 @@
   "FramesPerSecond": "Images par seconde",
   "GeoMetSearchLabel": "Chercher les couches {wmsSource}",
   "GeoMetWms": "Ajouter des couches {wmsSource}",
+  "GoToHomePage": "Aller à la page d'accueil AniMet du SMC",
   "InvisibleBasemap": "Rendre la carte de fond invisible",
   "LayerBarClosestTime": "Date la plus proche: ",
   "LayerBarCurrentTooltip": "Actuel",
@@ -61,6 +62,8 @@
   "MSCAnimet": "AniMet du SMC",
   "MSCAnimetEmail": "Animation météo créée à partir d'AniMet du SMC",
   "NoData": "Aucune donnée disponible ici",
+  "NotFound": "Erreur 404",
+  "NotFoundSub": "La page que vous recherchez est introuvable.",
   "NoTimeTooltip": "La couche ne possède pas de dimension temporelle",
   "OtherProperties": "Propriétés",
   "Overlays": "Superpositions",
