Removed legendSelector and replaced elements

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -12,10 +12,11 @@
   "Close": "Close",
   "CMD_WMS": "CMD-WMS",
   "Colon": ":",
-  "ColorBorder": "Display legends with coloured borders",
+  "ColorBorder": "Legends with coloured borders",
   "ColorPicker": "Color picker",
   "ControllerOptions": "Playback options",
   "DarkBasemapSwitch": "Dark",
+  "DisplayLegend": "Display legend",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_en/",
   "ExtentFullyOOB": "The entire selected temporal extent is no longer available. The date range slider has been reset.",
   "FPS": "FPS",
@@ -38,8 +39,6 @@
   "LayerControlsTitle": "Configure",
   "LayerStyle": "Select layer style",
   "LayerTree": "Add",
-  "Legends": "Displayed legends",
-  "LegendSelector": "Select displayed legend(s)",
   "Loading": "Loading...",
   "Loop": "Loop",
   "MadeWithAniMet": "Made with MSC AniMet",
@@ -72,6 +71,7 @@
   "ResetRotation": "Reset rotation",
   "RevertColor": "Revert to original color",
   "Reverse": "Play in reverse",
+  "ReverseAnimation": "Animate in reverse",
   "SelectCRS": "Select projection",
   "SelectMR": "Select model run",
   "Share": "Share",
