--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -12,10 +12,11 @@
   "Close": "Fermer",
   "CMD_WMS": "CMD-WMS",
   "Colon": " :",
-  "ColorBorder": "Afficher la bordure des légendes en couleur",
+  "ColorBorder": "Bordure des légendes en couleur",
   "ColorPicker": "Sélecteur de couleur",
   "ControllerOptions": "Options de lecture",
   "DarkBasemapSwitch": "Sombre",
+  "DisplayLegend": "Afficher la légende",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_fr/",
   "ExtentFullyOOB": "La plage complète des dates sélectionnées n'est plus disponible. La plage des dates sélectionnées a été réinitialisée.",
   "FPS": "IPS",
@@ -38,8 +39,6 @@
   "LayerControlsTitle": "Configurer",
   "LayerStyle": "Sélectionner le style de la couche",
   "LayerTree": "Ajouter",
-  "Legends": "Affichage des légendes",
-  "LegendSelector": "Sélectionner la ou les légende(s) affichée(s)",
   "Loading": "Chargement...",
   "Loop": "Lecture en boucle",
   "MadeWithAniMet": "Créé avec AniMet du SMC",
@@ -72,6 +71,7 @@
   "ResetRotation": "Réinitialiser la rotation",
   "RevertColor": "Remettre la couleur originale",
   "Reverse": "Lecture à reculons",
+  "ReverseAnimation": "Animer à reculons",
   "SelectCRS": "Sélectionner la projection",
   "SelectMR": "Sélectionner la passe de modèle",
   "Share": "Partager",
