--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -68,6 +68,7 @@
   "Overlays": "Superpositions",
   "OverlaysTip": "Les superpositions ajoutent de l'information au-dessus des couches affichées.",
   "Portrait": "Portrait",
+  "ReplaceLegends": "Les légendes doivent être placées dans le cadre pour apparaitre dans l'animation.",
   "ResetRotation": "Réinitialiser la rotation",
   "RevertColor": "Remettre la couleur originale",
   "Reverse": "Lecture à reculons",
